fix netty channel idle handler in 1.3.9