@@ -1,4 +1,4 @@
-#!/bin/bash
+#!/bin/sh
 #
 # Licensed to the Apache Software Foundation (ASF) under one or more
 # contributor license agreements.  See the NOTICE file distributed with
@@ -34,25 +34,17 @@ echo "Begin $startStop $command......"
 BIN_DIR=`dirname $0`
 BIN_DIR=`cd "$BIN_DIR"; pwd`
 DOLPHINSCHEDULER_HOME=`cd "$BIN_DIR/.."; pwd`
-BIN_ENV_FILE="${DOLPHINSCHEDULER_HOME}/bin/env/dolphinscheduler_env.sh"
 
-# Overwrite server dolphinscheduler_env.sh in path `<server>/conf/dolphinscheduler_env.sh` when exists
-# `bin/env/dolphinscheduler_env.sh` file. User could only change `bin/env/dolphinscheduler_env.sh` instead
-# of each server's dolphinscheduler_env.sh when they want to start the server
-function overwrite_server_env() {
-  local server=$1
-  local server_env_file="${DOLPHINSCHEDULER_HOME}/${server}/conf/dolphinscheduler_env.sh"
-  if [ -f "${BIN_ENV_FILE}" ]; then
-    echo "Overwrite ${server}/conf/dolphinscheduler_env.sh using bin/env/dolphinscheduler_env.sh."
-    cp "${BIN_ENV_FILE}" "${server_env_file}"
-  else
-    echo "Start server ${server} using env config path ${server_env_file}, because file ${BIN_ENV_FILE} not exists."
-  fi
-}
+source /etc/profile
 
+export JAVA_HOME=$JAVA_HOME
+#export JAVA_HOME=/opt/soft/jdk
 export HOSTNAME=`hostname`
 
-export DOLPHINSCHEDULER_LOG_DIR=$DOLPHINSCHEDULER_HOME/$command/logs
+export DOLPHINSCHEDULER_PID_DIR=$DOLPHINSCHEDULER_HOME/pid
+export DOLPHINSCHEDULER_LOG_DIR=$DOLPHINSCHEDULER_HOME/logs
+export DOLPHINSCHEDULER_CONF_DIR=$DOLPHINSCHEDULER_HOME/conf
+export DOLPHINSCHEDULER_LIB_JARS=$DOLPHINSCHEDULER_HOME/lib/*
 
 export STOP_TIMEOUT=5
 
@@ -60,60 +52,89 @@ if [ ! -d "$DOLPHINSCHEDULER_LOG_DIR" ]; then
   mkdir $DOLPHINSCHEDULER_LOG_DIR
 fi
 
-pid=$DOLPHINSCHEDULER_HOME/$command/pid
+log=$DOLPHINSCHEDULER_LOG_DIR/dolphinscheduler-$command-$HOSTNAME.out
+pid=$DOLPHINSCHEDULER_PID_DIR/dolphinscheduler-$command.pid
 
-cd $DOLPHINSCHEDULER_HOME/$command
+cd $DOLPHINSCHEDULER_HOME
+
+export DOLPHINSCHEDULER_OPTS="-server -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=128m -Xss512k -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:LargePageSizeInBytes=128m -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=70 -XX:+PrintGCDetails -Xloggc:$DOLPHINSCHEDULER_LOG_DIR/gc.log -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=dump.hprof -XshowSettings:vm $DOLPHINSCHEDULER_OPTS"
 
 if [ "$command" = "api-server" ]; then
-  log=$DOLPHINSCHEDULER_HOME/api-server/logs/$command-$HOSTNAME.out
+  LOG_FILE="-Dlogging.config=classpath:logback-api.xml -Dspring.profiles.active=api"
+  CLASS=org.apache.dolphinscheduler.api.ApiApplicationServer
+  HEAP_OPTS="-Xms1g -Xmx1g -Xmn512m"
+  export DOLPHINSCHEDULER_OPTS="$HEAP_OPTS $DOLPHINSCHEDULER_OPTS $API_SERVER_OPTS"
 elif [ "$command" = "master-server" ]; then
-  log=$DOLPHINSCHEDULER_HOME/master-server/logs/$command-$HOSTNAME.out
+  LOG_FILE="-Dlogging.config=classpath:logback-master.xml -Ddruid.mysql.usePingMethod=false"
+  CLASS=org.apache.dolphinscheduler.server.master.MasterServer
+  HEAP_OPTS="-Xms4g -Xmx4g -Xmn2g"
+  export DOLPHINSCHEDULER_OPTS="$HEAP_OPTS $DOLPHINSCHEDULER_OPTS $MASTER_SERVER_OPTS"
 elif [ "$command" = "worker-server" ]; then
-  log=$DOLPHINSCHEDULER_HOME/worker-server/logs/$command-$HOSTNAME.out
+  LOG_FILE="-Dlogging.config=classpath:logback-worker.xml -Ddruid.mysql.usePingMethod=false"
+  CLASS=org.apache.dolphinscheduler.server.worker.WorkerServer
+  HEAP_OPTS="-Xms2g -Xmx2g -Xmn1g"
+  export DOLPHINSCHEDULER_OPTS="$HEAP_OPTS $DOLPHINSCHEDULER_OPTS $WORKER_SERVER_OPTS"
 elif [ "$command" = "alert-server" ]; then
-  log=$DOLPHINSCHEDULER_HOME/alert-server/logs/$command-$HOSTNAME.out
+  LOG_FILE="-Dlogback.configurationFile=conf/logback-alert.xml"
+  CLASS=org.apache.dolphinscheduler.alert.AlertServer
+  HEAP_OPTS="-Xms1g -Xmx1g -Xmn512m"
+  export DOLPHINSCHEDULER_OPTS="$HEAP_OPTS $DOLPHINSCHEDULER_OPTS $ALERT_SERVER_OPTS"
+elif [ "$command" = "logger-server" ]; then
+  CLASS=org.apache.dolphinscheduler.server.log.LoggerServer
+  HEAP_OPTS="-Xms1g -Xmx1g -Xmn512m"
+  export DOLPHINSCHEDULER_OPTS="$HEAP_OPTS $DOLPHINSCHEDULER_OPTS $LOGGER_SERVER_OPTS"
 elif [ "$command" = "standalone-server" ]; then
-  log=$DOLPHINSCHEDULER_HOME/standalone-server/logs/$command-$HOSTNAME.out
+  LOG_FILE="-Dlogging.config=classpath:logback-standalone.xml"
+  CLASS=org.apache.dolphinscheduler.server.StandaloneServer
 else
   echo "Error: No command named '$command' was found."
   exit 1
 fi
 
-state=""
-function get_server_running_status() {
-  state="STOP"
-  if [ -f $pid ]; then
-    TARGET_PID=`cat $pid`
-    if [[ $(ps -p "$TARGET_PID" -o comm=) =~ "bash" ]]; then
-      state="RUNNING"
-    fi
-  fi
-}
+if [ "$SKYWALKING_ENABLE" = "true" ]; then
+  SKYWALKING_OPTS="-javaagent:$DOLPHINSCHEDULER_HOME/ext/skywalking-agent/skywalking-agent.jar -DSW_AGENT_NAME=dolphinscheduler::$command -DSW_LOGGING_FILE_NAME=skywalking-dolphinscheduler-$command.log"
+  export DOLPHINSCHEDULER_OPTS="$DOLPHINSCHEDULER_OPTS $SKYWALKING_OPTS"
+  echo "Info: Skywalking enabled opts: $SKYWALKING_OPTS"
+else
+  echo "Info: Skywalking not enabled."
+fi
 
 case $startStop in
   (start)
-    # if server is already started, cancel this launch
-    get_server_running_status
-    if [[ $state == "RUNNING" ]]; then
-      echo "$command running as process $TARGET_PID.  Stop it first."
-      exit 1
+    if [ "$DOCKER" = "true" ]; then
+      echo start $command in docker
+      export DOLPHINSCHEDULER_OPTS="$DOLPHINSCHEDULER_OPTS -XX:-UseContainerSupport"
+      exec_command="$LOG_FILE $DOLPHINSCHEDULER_OPTS -classpath $DOLPHINSCHEDULER_CONF_DIR:$DOLPHINSCHEDULER_LIB_JARS $CLASS"
+      $JAVA_HOME/bin/java $exec_command
+    else
+      [ -w "$DOLPHINSCHEDULER_PID_DIR" ] || mkdir -p "$DOLPHINSCHEDULER_PID_DIR"
+
+      if [ -f $pid ]; then
+        if kill -0 `cat $pid` > /dev/null 2>&1; then
+          echo $command running as process `cat $pid`.  Stop it first.
+          exit 1
+        fi
+      fi
+
+      echo starting $command, logging to $log
+      exec_command="$LOG_FILE $DOLPHINSCHEDULER_OPTS -classpath $DOLPHINSCHEDULER_CONF_DIR:$DOLPHINSCHEDULER_LIB_JARS $CLASS"
+      echo "nohup $JAVA_HOME/bin/java $exec_command > $log 2>&1 &"
+      nohup $JAVA_HOME/bin/java $exec_command > $log 2>&1 &
+      echo $! > $pid
     fi
-    echo starting $command, logging to $DOLPHINSCHEDULER_LOG_DIR
-    overwrite_server_env "${command}"
-    nohup /bin/bash "$DOLPHINSCHEDULER_HOME/$command/bin/start.sh" > $log 2>&1 &
-    echo $! > $pid
     ;;
 
   (stop)
+
       if [ -f $pid ]; then
         TARGET_PID=`cat $pid`
         if kill -0 $TARGET_PID > /dev/null 2>&1; then
           echo stopping $command
-          pkill -P $TARGET_PID
+          kill $TARGET_PID
           sleep $STOP_TIMEOUT
           if kill -0 $TARGET_PID > /dev/null 2>&1; then
             echo "$command did not stop gracefully after $STOP_TIMEOUT seconds: killing with kill -9"
-            pkill -P -9 $TARGET_PID
+            kill -9 $TARGET_PID
           fi
         else
           echo no $command to stop
@@ -123,18 +144,6 @@ case $startStop in
         echo no $command to stop
       fi
       ;;
-
-  (status)
-    get_server_running_status
-    if [[ $state == "STOP" ]]; then
-      #  font color - red
-      state="[ \033[1;31m $state \033[0m ]"
-    else
-      # font color - green
-      state="[ \033[1;32m $state \033[0m ]"
-    fi
-    echo -e "$command  $state"
-    ;;
 
   (*)
     echo $usage
